--- a/flask_user/templates/flask_user_layout.html
+++ b/flask_user/templates/flask_user_layout.html
@@ -74,7 +74,7 @@
     <hr class="no-margins"/>
     <div id="footer-div" class="clearfix with-margins">
         <div class="pull-left">{{ user_manager.USER_APP_NAME }} v1.0</div>
-        <div class="pull-right">&copy; 2014 MyCorp</div>
+        <div class="pull-right">&copy; 2019 Smart Cloud Forge</div>
     </div>
     {% endblock %}
 
